# Warning_device

./: .gitignore  README.md  partitions.csv  preview.html  sdkconfig  sdkconfig.defaults  sdkconfig.old
assets/: tuong_phat.glb  tuong_phat.gltf
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/coreMQTT/: CMakeLists.txt
components/libs/azure-iot-middleware-freertos/source/: azure_iot_hub_client.c
config/: azure_iot_config.h
docs/: azure-backend-audio-600-601-602.txt  azure-backend-direct-method-Control.txt
docs/superpowers/specs/: 2026-07-14-audio-files-azure-web-design.md
main/: CMakeLists.txt  DAC_I2S.h  bt_app_core.c  bt_app_core.h  main.c  user_audio_files.c  user_audio_files.h  user_azure.c  user_azure.h  user_bluetooth.c  user_bluetooth.h  user_excute_audio.c  user_excute_audio.h  user_http_server.c  user_ota.c  user_ota.h  user_sdcard.c  user_sdcard.h  user_system.h  user_time.c  user_wifi.c  user_wifi.h
spiffs/: README.txt
tools/: make_buddha_gltf.py
warning_device/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  test1
warning_device/.cache/clangd/index/: azure_iot_config.h.F1D78213F3B5A416.idx  backoff_algorithm.c.37AA5014C1D19777.idx  backoff_algorithm.h.02A69A873ECE15E6.idx  bt_app_core.c.29FDEDDC1DDF6FE2.idx  bt_app_core.h.F59D49752D285204.idx  cJSON.c.227CBAAECA5D9E19.idx  cJSON.h.98F2CEC4867D613E.idx  cJSON_Utils.c.7FD3853F5AE1D83E.idx  cJSON_Utils.h.51C31A7318BDFB2E.idx  core_mqtt_config.h.5CAC5A2E7248F19D.idx  crypto_esp32.c.662678AA9943D998.idx  demo_config.h.96243C3CFEBBE11F.idx  main.c.5B5977909D616CCF.idx  transport_tls_esp32.c.7ED8D6E28B409674.idx  user_azure.c.F7EBFD32905AC1F1.idx  user_azure.h.27D9FF2117E0E662.idx  user_http_server.c.B2169D7612886690.idx  user_http_server.h.ADFFB1D1E34B26A7.idx  user_sdcard.c.62D8DA1BC03BB965.idx  user_sdcard.h.3CD654983E025C71.idx
warning_device/components/libs/azure-iot-middleware-freertos/source/: azure_iot_hub_client.c
warning_device/main/: CMakeLists.txt  DAC_I2S.c  bt_app_core.c  main.c  user_azure.c  user_azure.h  user_bluetooth.c  user_bluetooth.h  user_excute_audio.c  user_excute_audio.h  user_http_server.c  user_http_server.h  user_ota.c  user_ota.h  user_sdcard.c  user_sdcard.h  user_system.c  user_system.h  user_time.c  user_time.h  user_wifi.c  user_wifi.h
